--- a/source/docs/graphics/04.07.linearGradientBrush.md
+++ b/source/docs/graphics/04.07.linearGradientBrush.md
@@ -86,4 +86,4 @@ Doğrusal renk geçiş fırçaları her ne kadar iki renk arasındaki geçişler
 {% iframe https://jsfiddle.net/tuvalframework/bo2xs3ug/show %}
 ## _Renk Geçişinde Saydamlık Kullanımı
 
-## Renk Geçişi Tekrarı
+## _Renk Geçişi Tekrarı
