--- a/source/docs/graphics/en/01.01.UnderstandingTuval.md
+++ b/source/docs/graphics/en/01.01.UnderstandingTuval.md
@@ -19,15 +19,15 @@ In this section we introduce to *Tuval Graphics*. Firstly, before you start writ
 - TGI ve klasik yöntemler arasındaki farklılıklar nelerdir?
 - TGI içerisinde hangi nesneler bulunmaktadır?
 
-Verimli ve optimize edilmiş grafik uygulamaları yazmak istiyorsanız, TGI sınıf kütüphanesini anlamak önemlidir. Bu bölümde TGI'ın nasıl tanımlandığını javascript uygulamalarında nasıl kullanılabileceğini konuşacağız.
+If you want to write efficient and optimized graphics applications, it is important to understand the TGI class library. In this section, we will talk about how TGI can be used in javascript applications.
 
-## Tuval Graphics Nedir?
-Tuval Graphics Interface(TGI), Tuval Framework içerisinde **vectorel çizimlere** odaklanmış bir yazılım kütüphanesidir.
-Tüm grafik uygulamaları ister web ortamı için yazılsın, ister desktop ortamları için, bir çizim yüzeyine ihtiyaç duyar. TGI size çizim yapacağınız yüzeylerin farklılıklarını ortadan kaldırarak aynı standart api lar ile farklı yüzeylere çizim yapmanıza imkan sağlar. Aşağıdaki görsel bunu ifade etmektedir.
+## What is Tuval Graphic Interface?
+Tuval Graphics Interface (TGI) is a software library that focuses on vectoral drawings in the Tuval Framework.
+All graphics applications require a drawing surface, whether for web environment or desktop environments. TGI allows you to draw on different surfaces with the same standard api by eliminating the differences of the surfaces you are going to draw. The following image refers to this.
 <img src="../images/Picture1.png" width="529" height="294" />
 
-## Tuval Nasıl Tanımlanır ?
-- *Tuval.Graphics*, web uygulamanız ile vectorel çizimlerin yapılacağı ortam arasına oturan bir bileşendir. Tuval.Graphics içerisinden verdiğiniz komutlar ilgili ortamın anlayacağı şekle dönüştürülür.
-- *Tuval.Graphics* typescript kullanılarak üretilmiş javascript nesnelerin bütününe verilen isimdir. Bu dokümanda Tuval.Graphics ifadesi yerine daha kısa olan TGI (Javascript Graphic Interface) ifadesini daha sıklıkla kullanacağız.
+## How to Define TGI?
+- *Tuval.Graphics*, web uygulamanız ile vectorel çizimlerin yapılacağı ortam arasına oturan bir bileşendir. TGI is a component that sits between your web application and the environment in which the vector drawings will be made. The commands that you export from TGI are converted into a form that the relevant environment understands.
+- TGI is the name given to the whole of javascript objects produced by typescript. In this document, we will use the shorter TGI expression rather than the Tuval Graphics Interface statement.
 
-Bu dokümanda genellikle *Tuval.Graphics* typescript ve javascript örnekleri ile kullanılacaktır.
+This document will usually be used with TGI typescript and javascript examples.
