--- a/source/docs/graphics/en/01.02.ExploringTuvalFunctionality.md
+++ b/source/docs/graphics/en/01.02.ExploringTuvalFunctionality.md
@@ -1,29 +1,29 @@
-title: TGI'ı Kesfetmek
+title: Exploring TGI
 language: en
 ---
-TGI'ı kendi içerisinde işlevselliğine göre kategorilere ayırabiliriz:
+We can categorize TGI according to its functionality:
 
-  - Primitive Nesneler (Color, RectangleF, PointF, SizeF, Vector2D)
-  - 2B Vektörel Grafikler (line, rectangle, eğriler, path'ler vb.)
-  - Tipografi (text) işlemleri
-  - Resim(image) işlemleri
-  - Transform (Dönüştürme) işlemleri
+  - Primitive Objects (Color, RectangleF, PointF, SizeF, Vector2D)
+  - 2D Vector Graphics (line, rectangle, curves, paths etc.)
+  - Typing (text) Operations
+  - Image Operations
+  - Transform Operations
 
-## Primitive Nesneler
-TGI içerisinde tüm vektörel işlemlerde kullanılan bazı standart nesneler vardır. Bunlardan bazıları Color, RectangleF, PointF, SizeF, Vector2D'dır. Bu nesneler TGI içerisinde birçok işlemde kullanıldıklarından iyi anlaşılmaları önemlidir. Sonraki bölümde bu nesneleri daha detaylı ele alacağız.
+## Primitive Objects
+In TGI, there are some standart objects used in all vector operations. Some of these are Color, RectangleF, PointF, SizeF, Vector2D. It is important to understand these objects as they are used in many processes in TGI. We will talk about these objects later.
 
-## 2B Vektörel Grafikler
+## 2D Vector Graphics
 
-Vektör grafikleri, bir koordinat sistemindeki nokta kümeleri tarafından belirlenebilecek şekillerin çizilmesiyle ilgilidir. Bu şekillere ilkel şekiller(primitive shapes) denir; Örnek olarak; çizgiler, eğriler, dikdörtgenler ve graphics path'leri verebiliriz. TGI içerisinde, bu tip vektörel şekilleri oluşturmak için hazır yordamlar bulunmaktadır
+Vector graphics relate to drawing shapes that can be determined by point sets in a coordinate system. These shapes are called primitive shapes; For example, we can give lines, curves, rectangles and graphics paths. In TGI, there are ready-made methods for creating such vector shapes.
 
-TGI kütüphanesinde, 2B vektör programlamayı iki kategoriye ayırabiliriz: genel ve ileri. Genel 2B vektör grafikleri temel çizim yordamlarını ve nesnelerini sağlarkan ileri seviye nesneler ise daha komplex işlemler için kullanılır.
+In the TGI library, we can divide 2D vector programming into two categories: general and advanced. General 2D vector graphics provide basic drawing procedures and objects, while advanced objects are used for more complex operations.
 
-Genel kategorisinde tanımlanan başlıca 2B vektör programlama sınıfları; Pen, Pens, Brush (ve Brush'tan türetilmiş sınıflar), Brushes, Font (ve Yazı Tipi ile ilgili diğer sınıflar), PointF, RectangleF ve SizeF'dir. Bu sınıfları ve üyelerini diğer bölümlerde daha ayrıntılı olarak ele alacağız.
+The main 2D vector programming classes defined in the general category are; Pen, Pens, Brush (and Brush-derived classes), Brushes, Font (and other typing related classes), PointF, RectangleF ve SizeF. We will discuss these classes and their members in more detail in other chapters.
 
-İleri kategorisinde ise , blending denilen harmanlama, renk harmanlama (color blending), grafik yolları(graphics path), özel çizgi sonlandırmaları (custom line caps), hatch brush ve doğrusal geçiş fırçaları(Linear gradient brushes) ve matrisler bulunur. Yine bu sınıfları ve üyelerini daha sonraki bölümlerde  ayrıntılı olarak ele alacağız.
+The Advanced category includes blending, color blending, graphic paths, custom line caps, hatch brushes, linear gradient brushes and matrices. We will discuss these classes and their members in more detail later.
 
-## Resim(Image) İşlemleri
-Resim işlemleri (imaging), resimleri görüntülemeyi ve değiştirmeyi içerir.  Bitmap ve Graphics sınıfı sayesinde resimleri görüntüleyebilir ve değiştirebiliriz.
+## Image Processing
+Image processing includes viewing and modifying images. With the Bitmap and Graphics class, we can display and modify images.
 
-## Tipografi (text işlemleri)
-Tipografi, metnin tasarımını ve görünümünü ifade eder. TGI, fontları oluşturmak ve kullanmak için sınıflar sağlar. Bu kategorideki en önemli sınıf **Font** sınıfıdır. Ekrana bir yazı yazmak istediğinizde kullanacağınız tüm yordamlar Font nesnesine ihtiyaç duyacaktır. TGI ayrıca, bir sistemde yüklü tüm yazı tiplerini okumak için sınıflar sağlar. Yazı tipi koleksiyonuna özel yazı tipleri de ekleyebilirsiniz. Ayrıca TGI opentypejs kütüphanesi kullanarak yazı tipleri üzerinde daha fazla işlem yapmanıza olanak verir. Bu konuları daha sonra detaylandıracağız.
+## Typography
+Typography refers to the design and appearance of the text. TGI provides classes for creating and using fonts. The most important class in this category is the Font class. All the procedures you will use when you want to write a text on the screen will require a Font object. TGI ayrıca, bir sistemde yüklü tüm yazı tiplerini okumak için sınıflar sağlar. TGI also provides classes for reading all fonts installed on a system. In addition, TGI allows you to take more action on fonts using the opentypejs library. We will detail these issues later.
