--- a/source/docs/graphics/04.07.linearGradientBrush.md
+++ b/source/docs/graphics/04.07.linearGradientBrush.md
@@ -84,6 +84,7 @@ Doğrusal renk geçiş fırçaları her ne kadar iki renk arasındaki geçişler
       tg.drawRectangle(Tuval.Pens.Gray, rect);
 ```
 {% iframe https://jsfiddle.net/tuvalframework/bo2xs3ug/show %}
-## _Renk Geçişinde Saydamlık Kullanımı
-
+## Renk Geçişinde Saydamlık Kullanımı
+Renk geçişlerinde saydamlık kullanımı için kullanacağımız renklerin alfa kanalını ayarlamamız gerekir. TGI içerisindeki Color sınıfı bir rengi tanımlamak için dört parametre kullanır. Bunlar R, G, B ve alpha değerleridir. Bir rengi oluşturan bu değerlerin karışımından bizim gördüğümüz renk skalaları oluşur. Bir rengin saydamlığını ise o rengi oluştururken verdiğimiz alpha değeri belirler. Alpha değeri 0 ile 255 arasındaki değerlerden biridir. 0 görünmezlik, 255 ise saydam olmayan bir görünüm katar. Aşağıdaki örnekte saydam renkler kullanılarak doğrusal renk geçişi gösterilmiştir.
+{% iframe https://jsfiddle.net/tuvalframework/zktc23we/show %}
 ## _Renk Geçişi Tekrarı
