--- a/source/docs/graphics/03.07.drawArc.md
+++ b/source/docs/graphics/03.07.drawArc.md
@@ -1,23 +1,19 @@
 title: Ekrana yay çizmek
+language: tr
 ---
-
 ## drawArc
-<<<<<<< HEAD
 ```typescript
 public drawArc(pen: Pen, rect: RectangleF, startAngle: float, sweepAngle: float, mode?: ArcModes): void;
 public drawArc(pen: Pen, x: float, y: float, width: float, height: float, startAngle: float, stopAngle: float, mode?: ArcModes): void;
 ```
 Bir yay, elipsin bir kısmıdır. Örneğin, aşağıdaki şekilde altı kemerli bir elips gösterilmektedir. Bir yay, bir sınırlayıcı dikdörtgen (sadece bir elips gibi), bir başlangıç açısı ve bir tarama açısı ile tanımlanır. Başlama açısı, x ekseninden yayın başlangıç noktasına kadar saat yönünde ölçülen derece cinsinden bir açıdır. Tarama açısı startAngle parametresinden arkın bitiş noktasına kadar saat yönünde ölçülen derece cinsinden bir açıdır. Dolayısıyla bir yay, elipsin çevresinin başlangıç açısı ile başlangıç açısı artı süpürme açısı arasındaki bölümüdür.
 {% iframe https://jsfiddle.net/tuvalframework/y5anq1gf/show %}
-=======
-Bir yay, elipsin bir kısmıdır. Örneğin, aşağıdaki şekilde altı kemerli bir elips gösterilmektedir. Bir yay, bir sınırlayıcı dikdörtgen (sadece bir elips gibi), bir başlangıç açısı ve bir tarama veya bitiş açısı ile tanımlanır. Başlama açısı, x ekseninden yayın başlangıç noktasına kadar saat yönünde ölçülen derece cinsinden bir açıdır. Tarama açısı startAngle parametresinden arkın bitiş noktasına kadar saat yönünde ölçülen derece cinsinden bir açıdır. Dolayısıyla bir yay, elipsin çevresinin başlangıç açısı ile başlangıç açısı artı süpürme açısı arasındaki bölümüdür.
->>>>>>> 37dcf420ab8e0696f207e13352dad68be9697708
 
 **drawArc** yordamı, grafik yüzeyine bir yay çizer. Bir yay çizebilmemiz için koordinatlara ve açılara ihtiyacımız vardır. drawArc  yordamının iki versiyonu vardır;
 ```typescript
 public drawArc(pen: Pen, rect: RectangleF, startAngle: float, sweepAngle: float, mode?: ArcModes): void;
 ```
-Pen nesnesi yayın sınırlarına çizilecek olan çizginin rengini, genişliğini ve stilini belirler; RectangleF, bu yayın bir parçası olduğu elipsi sınırlayan dikdörtgeni temsil eder, startAngle ve sweepAngle sırasıyla başlangıç açısı ve tarama açısıdır. Son parametre ise ArcModes denilen sıralı bir değerdir. Yayın çizim sitilini etkiler. Open, Pie, Chord değerlerinden birini alır. Son parametre opsiyoneldir, istenirse boş bırakılabilir.
+Pen nesnesi yayın sınırlarına çizilecek olan çizginin rengini, genişliğini ve stilini belirler; RectangleF, bu yayın bir parçası olduğu elipsi sınırlayan dikdörtgeni temsil eder,startAngle ve sweepAngle sırasıyla başlangıç açısı ve tarama açısıdır. Son parametre ise ArcModes denilen sıralı bir değerdir. Yayın çizim sitilini etkiler. Open, Pie, Chord değerlerinden birini alır. Son parametre opsiyoneldir, istenirse boş bırakılabilir.
 
 Aşağıdaki uygulama bir yay çizmek için, Pen ve RectangleF nesneleri oluşturur ve başlangıç ve tarama açılarını tanımlar. Sonra drawArc yordamını çağırır.
 ````html
@@ -41,7 +37,6 @@ Aşağıdaki uygulama bir yay çizmek için, Pen ve RectangleF nesneleri oluştu
 </html>
 ````
 {% iframe https://jsfiddle.net/tuvalframework/q0pd5gt7/show %}
-<<<<<<< HEAD
 **drawArc** yordamının ikinci versiyonu da aşağıdaki forma sahiptir.
 ```typescript
 public drawArc(pen: Pen, x: float, y: float, width: float, height: float, startAngle: float, stopAngle: float, mode?: ArcModes): void;
@@ -67,5 +62,3 @@ Pen nesnesi ilk versiyondaki ile aynıdır. Sırasıyla x,y,width, height elipsi
 </html>
 ````
 {% iframe https://jsfiddle.net/tuvalframework/m3rg2qch/show %}
-=======
->>>>>>> 37dcf420ab8e0696f207e13352dad68be9697708
