--- a/source/docs/graphics/en/04.07.linearGradientBrush.md
+++ b/source/docs/graphics/en/04.07.linearGradientBrush.md
@@ -53,7 +53,37 @@ The *angle* parameter allows us to specify any direction we want angularly. The 
 {% iframe https://jsfiddle.net/tuvalframework/tLdp6x5r/show %}
 
 ## Adding Color Stops
+Although the linear gradient  brushes are often used in transitions between two colors, there are also different methods of using color transitions. One is to use the InterpolationColors property, which is a member of the LinearGradientBrush class. According to the ColorBlend object we assign to this ColorBlend class type, our brush will switch between different colors. We can adjust the ratios of these transitions with the positions member of the ColorBlend class. The following code example makes an implementation of it.
+```javascript
+  var brush = new Tuval.LinearGradientBrush(new Tuval.RectangleF(0, 0, 100, 100),
+                 Tuval.Color.White, Tuval.Color.Red);
+  var colorBlend = new Tuval.ColorBlend();
+  colorBlend.Colors = [
+          new Tuval.Color(41, 137, 204),
+          new Tuval.Color(255, 255, 255),
+          new Tuval.Color(144, 106, 0),
+          new Tuval.Color(217, 159, 0),
+          new Tuval.Color(255, 255, 255),
+        ];
+   colorBlend.Positions = [0, 0.5, 0.52, 0.64, 1];
+   brush.InterpolationColors = colorBlend;
+```
+{% iframe https://jsfiddle.net/tuvalframework/ybxLjgen/show %}
 
+```javascript
+      var brush = new Tuval.LinearGradientBrush(new Tuval.RectangleF(0, 0, 200, 200),
+                            Tuval.Color.White, Tuval.Color.Blue, angle);
+      var rect = new Tuval.RectangleF(200, 10, 200, 200);
+      var myFactors = [.2, .4, .8, .8, .4, .2];
+      var myPositions = [0.0, .2, .4, .6, .8, 1.0];
+      var myBlend = new Tuval.Blend();
+      myBlend.Factors = myFactors;
+      myBlend.Positions = myPositions;
+      brush.Blend = myBlend;
+      tg.fillRectangle(brush, rect);
+      tg.drawRectangle(Tuval.Pens.Gray, rect);
+```
+{% iframe https://jsfiddle.net/tuvalframework/bo2xs3ug/show %}
 ## Using Transparency in Color Transition
-
-## Repeat of Color Transition
+We need to adjust the alpha channel of the colors we will use for transparency use in color transitions. The Color class in TGI uses four parameters to define a color. These are R, G, B and alpha values. The transparency of a color determines the alpha value we give when creating that color. The Alpha value is one of the values between 0 and 255. 0 invisibility, 255 adds a non-transparent look. The following example shows the linear color transition using transparent colors.
+{% iframe https://jsfiddle.net/tuvalframework/zktc23we/show %}
